@@ -1,5 +1,8 @@
 1999-12-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
+	* poe-18.el (numberp): New function; alias for `integerp'.
+	(abs): New function.
+
 	* poe-18.el (byte-code-function-p): Docstring sync.
 	(cyclic-function-indirection): New error symbol.
 	(indirect-function): New function; use above symbol.
